deploy/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: imp-server
  namespace: default
spec:
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      app: imp-server
  template:
    metadata:
      labels:
        app: imp-server
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: imp-deploy
                    operator: In
                    values:
                      - true
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - imp-server
              topologyKey: kubernetes.io/hostname
      terminationGracePeriodSeconds: 10
      containers:
        - name: imp-server
          image: docker.example.com/imp-server:v0.0.1
          imagePullPolicy: IfNotPresent
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8083
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8083
          volumeMounts:
            - name: dir-tftp
              mountPath: /imp/pxelinux.cfg/
            - name: config-imp-server
              mountPath: /imp/conf/imp-server.conf
      volumes:
        - name: "dir-tftp"
          hostPath:
            path: "/var/lib/tftpboot/pxelinux.cfg/"
        - name: "config-imp-server"
          configMap:
            name: config-imp-server
