deploy/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: imp-server
  namespace: default
spec:
  ports:
    - port: 8083
      protocol: TCP
      targetPort: 8083
  selector:
    app: imp-server
  type: ClusterIP
